# xpe-amazonas-nosql-db

./: .env  Documento Arquitetural de Dados.docx  README.md  docker-compose.yml  pyproject.toml  template.json
app/: create_collections.py  requirements.txt  seed_data.py
models/: MongoDB model amazonas-db-v1.hck.json  MongoDB model amazonas-db-v2.hck.json
scripts/: Export-MongoCollections.ps1  carts.ndjson  customers.ndjson  orders.ndjson  payments.ndjson  products.ndjson  reviews.ndjson
